<resources>
    <string name="app_name">Online MP3</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Vishal+Android+Apps</string>

    <string name="privacy_policy_url">http://google.com</string>

    <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>


    <!--change all this text in your language-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_about">About Us</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="server_no_conn">Error, Server not connected</string>
    <string name="loading">Loading..</string>
    <string name="recently_played">Recently Played</string>
    <string name="search">Search</string>
    <string name="no_data_found">No Data Found</string>
    <string name="internet_not_conn">Internet not connected</string>
    <string name="artist">Artist</string>
    <string name="category">Category</string>
    <string name="developedby">Developed By</string>
    <string name="home">Home</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="categories">Categories</string>
    <string name="favourite">Favourite</string>
    <string name="removed_fav">Removed from favourite</string>
    <string name="added_fav">Added to fav</string>
    <string name="share_song">Share Song</string>
    <string name="song">Song</string>
    <string name="downloading">Downloading</string>
    <string name="already_download">File already downloaded</string>
    <string name="volume">Volume</string>
    <string name="cannot_use_save">Cannot use save feature without requested permission</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="desc">Description</string>
    <string name="privacy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_app">More Apps</string>
    <string name="downloads">Downloads</string>
    <string name="no_song_selected">No Song Selected</string>
    <string name="listening">I am listening</string>
    <string name="my_playlist">My Playlist</string>
    <string name="add_playlist">Add PlayList</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_added">Playlist Added</string>
    <string name="remove">Remove</string>
    <string name="remove_playlist">Playlist removed</string>
    <string name="remove_from_playlist">Removed from playlist</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="song_add_to_playlist">Song add to playlist - </string>
    <string name="close">Close</string>
    <string name="select_rating_msg">Please select rating</string>
    <string name="rating">Rating</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="sure_delete">Are you sure you want to delete this song?</string>
    <string name="file_deleted">File Deleted</string>
    <string name="playlist">Playlist</string>
    <string name="nav_header_line">Play your favourite songs</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="latest_artist">Latest Artist</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="select_rating">Select Rating</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="download_path">Download Path</string>
    <string name="albums">Albums</string>
    <string name="try_again">Try Again</string>
    <string name="rate_song">Rate this song</string>
</resources>
