<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:padding="12dp"
        android:text="@string/rating"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rating_add"
        style="@style/RatingBar_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:max="5"
        android:numStars="5"
        android:theme="@style/RatingBar_normal" />

    <TextView
        android:id="@+id/textView_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rate_song"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="35dp"
        android:background="@color/black20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_submit_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/pink" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_later_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/maybe_later"
            android:textColor="@color/white"
            app:backgroundTint="@color/grey"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>