<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager_home"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/black40"
                android:padding="10dp"
                android:text="@string/recently_played"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_home_recent"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/textView_recent_empty"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/no_data_found"
                    android:textColor="@color/white80"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/black40"
                android:padding="10dp"
                android:text="@string/latest_artist"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_home_artist"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/textView_artist_empty"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/no_data_found"
                    android:textColor="@color/white80"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

        <include
            layout="@layout/layout_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?attr/actionBarSize"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>